# smartagents-desktop

./: .gitignore  README.md  build_log.txt  package-lock.json  package.json  start
.github/workflows/: ci.yml
backend/: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
backend/src/: main.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.js
frontend/src/: App.svelte
frontend/src-tauri/: tauri.conf.json
frontend/src/routes/: +layout.svelte  Agents.svelte
frontend/src/routes/upload/: +page.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: agent.rs  file_embedding.rs  main.rs
