[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "windsurf-agent-backend"
version = "0.1.0"
description = "Optional microservices for Windsurf Agent Studio"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi==0.109.0",
    "uvicorn==0.27.0",
    "pydantic==2.6.1",
    "python-multipart==0.0.9"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "black",
    "isort"
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
strict = true
ignore_missing_imports = true
